Fixed background image height of biodata too small.
Add min-height to biodata section.

--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ body {
 
 #biodata-section {
     background-image: url("binary.webp");
+    min-height: 615px;
 }
 
 #biodata-box-bg {
